Modal dialog updated include additional info

--- a/assets/css/cpd-admin-dashboard.css
+++ b/assets/css/cpd-admin-dashboard.css
@@ -110,7 +110,8 @@ body.wp-admin .admin-page-container .admin-sidebar .logo-container {
     text-align: center !important;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1) !important;
     flex-shrink: 0 !important;
-    background-color: var(--primary-color) !important;
+    /* background-color: var(--primary-color) !important; */
+    background-color: var(--bg-color) !important;
 }
 
 body.wp-admin .admin-page-container .admin-sidebar .logo-container img {
